# FileOrganiser

./: CMakeLists.txt  imgui.ini
src/: main.cpp
src/Managers/: FileManager.cpp  FileManager.h  SearchManager.cpp  SearchManager.h  TagManager.cpp  TagManager.h
src/States/: EntryState.cpp  EntryState.h
